// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test CardsGrid Component Test Snapshot renders with cards and error message. 1`] = `
<div
  className="MuiGrid-root makeStyles-root-1 MuiGrid-container"
>
  <div
    className="MuiPaper-root MuiAlert-root MuiAlert-standardError makeStyles-error-2 MuiPaper-elevation0"
    role="alert"
  >
    <div
      className="MuiAlert-icon"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
    </div>
    <div
      className="MuiAlert-message"
    >
      API ERROR
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <div
          className="MuiPaper-root MuiCard-root makeStyles-root-5 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <img
            alt="Card 1"
            className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img"
            height="560"
            title="Card 1"
          />
          <div
            className="MuiCardContent-root makeStyles-content-6"
          >
            <h3
              className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
            >
              Card 1
            </h3>
            <h4
              className="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
            >
              Type 1
               / 
              Set 1
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2"
            >
              Text on Card 1
            </p>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <div
          className="MuiPaper-root MuiCard-root makeStyles-root-5 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <img
            alt="Card 2"
            className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img"
            height="560"
            title="Card 2"
          />
          <div
            className="MuiCardContent-root makeStyles-content-6"
          >
            <h3
              className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
            >
              Card 2
            </h3>
            <h4
              className="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
            >
              Type 1
               / 
              Set 1
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2"
            >
              Text on Card 2
            </p>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <div
          className="MuiPaper-root MuiCard-root makeStyles-root-5 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <img
            alt="Card 3"
            className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img"
            height="560"
            title="Card 3"
          />
          <div
            className="MuiCardContent-root makeStyles-content-6"
          >
            <h3
              className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
            >
              Card 3
            </h3>
            <h4
              className="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
            >
              Type 2
               / 
              Set 1
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2"
            >
              Text on Card 3
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test CardsGrid Component Test Snapshot renders with cards. 1`] = `
<div
  className="MuiGrid-root makeStyles-root-1 MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <div
          className="MuiPaper-root MuiCard-root makeStyles-root-5 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <img
            alt="Card 1"
            className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img"
            height="560"
            title="Card 1"
          />
          <div
            className="MuiCardContent-root makeStyles-content-6"
          >
            <h3
              className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
            >
              Card 1
            </h3>
            <h4
              className="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
            >
              Type 1
               / 
              Set 1
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2"
            >
              Text on Card 1
            </p>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <div
          className="MuiPaper-root MuiCard-root makeStyles-root-5 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <img
            alt="Card 2"
            className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img"
            height="560"
            title="Card 2"
          />
          <div
            className="MuiCardContent-root makeStyles-content-6"
          >
            <h3
              className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
            >
              Card 2
            </h3>
            <h4
              className="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
            >
              Type 1
               / 
              Set 1
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2"
            >
              Text on Card 2
            </p>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <div
          className="MuiPaper-root MuiCard-root makeStyles-root-5 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <img
            alt="Card 3"
            className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img"
            height="560"
            title="Card 3"
          />
          <div
            className="MuiCardContent-root makeStyles-content-6"
          >
            <h3
              className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
            >
              Card 3
            </h3>
            <h4
              className="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
            >
              Type 2
               / 
              Set 1
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2"
            >
              Text on Card 3
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test CardsGrid Component Test Snapshot renders without cards. 1`] = `
<div
  className="MuiGrid-root makeStyles-root-1 MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
    />
  </div>
</div>
`;
